# kucx

./: README.en.md  README.md
src/ucm/ptmalloc286/: malloc.c
src/ucp/: Makefile.am
src/ucp/api/: ucp.h  ucp_def.h
src/ucp/core/: ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.h  ucp_failover.c  ucp_failover.h  ucp_request.inl  ucp_types.h  ucp_worker.c  ucp_worker.h  ucp_worker.inl
src/ucp/proto/: proto_am.c  proto_am.inl
src/ucp/rma/: amo_basic.c  amo_sw.c  flush.c  rma_basic.c  rma_send.c
src/ucp/rndv/: rndv.c
src/ucp/tag/: tag_match.c  tag_match.inl
src/ucp/wireup/: address.c  address.h  select.c  wireup.c  wireup.h  wireup_ep.c  wireup_ep.h
src/ucs/sys/: sock.c  sock.h
src/uct/api/: tl.h  uct.h  uct_def.h
src/uct/ib/: Makefile.am  configure.m4
src/uct/ib/base/: ib_device.c  ib_device.h  ib_failover.c  ib_failover.h  ib_iface.c  ib_iface.h  ib_md.c  ib_md.h
src/uct/ib/rc/base/: rc_ep.c  rc_ep.h  rc_failover.c  rc_failover.h  rc_iface.c  rc_iface.h
src/uct/ib/rc/failover/: rc_failover.h  rc_failover_ep.c  rc_failover_iface.c  rc_failover_resend.c
src/uct/ib/rc/verbs/: rc_verbs.h  rc_verbs_ep.c  rc_verbs_iface.c  rc_verbs_impl.h
src/uct/ib/ud/base/: ud_ep.c  ud_ep.h  ud_iface.c  ud_iface.h
src/uct/ib/ud/verbs/: ud_verbs.c
src/uct/sm/mm/base/: mm_iface.c
src/uct/sm/scopy/: Makefile.am  configure.m4
src/uct/sm/scopy/sdma/: Makefile.am  configure.m4  sdma_ep.c  sdma_ep.h  sdma_iface.c  sdma_iface.h  sdma_md.c  sdma_md.h
src/uct/tcp/: tcp.h  tcp_iface.c  tcp_net.c
